# lanternlibrary.org

./: .env.example  .gitignore  CLAUDE.md  STYLE_GUIDE.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  wrangler.jsonc
app/: globals.css  layout.tsx  page.tsx
app/api/read/: route.ts
app/api/read/stories/: route.ts
app/api/render/: route.ts
app/api/search/: route.ts
app/api/tiles/read/: route.ts
app/api/tiles/reflect/: route.ts
app/read/: page.tsx
app/reflect/: page.tsx
app/reflect/preview/: page.tsx
app/reflect/released/: page.tsx
app/roadmap/: page.tsx
app/stories/: page.tsx
app/stories/[collection]/: page.tsx
app/story/[slug]/: page.tsx
app/story/[slug]/letter/: LetterForm.tsx  page.tsx
components/: ContributorSurface.tsx  Footer.tsx  Lantern.tsx  LanternField.tsx  ReadChat.tsx  ReaderSurface.tsx  SampleBadge.tsx  SearchSurface.tsx  Wordmark.tsx  useDictation.ts  useLiveTiles.ts
lib/: llm.ts  storage.ts  stories.ts  tiles.ts
lib/db/: index.ts  schema.ts
scripts/: db-seed.ts
server/: .env.example  README.md  pyproject.toml
server/lantern_reflect/: __init__.py  bot.py  prompts.py  server.py
